<resources>
    <string name="app_name">Gastos</string>
    <string name="entrar">Entrar</string>
    <string name="registrarme">Registrarme</string>
    <string name="usuario">Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="contrase_a_otra_vez">Contraseña otra vez</string>
    <string name="imagen_de_usuario">Imagen de usuario</string>
    <string name="hola_usuario">Hola usuario</string>
    <string name="correo">Correo</string>
    <string name="apellidos">Apellidos</string>
    <string name="nombre">Nombre</string>
    <string name="ltimo_acceso">Último acceso</string>
    <string name="a_adir_gasto">Añadir gasto</string>
    <string name="saldo">Saldo</string>
    <string name="categor_as">Categorías</string>
    <string name="a_adir">Añadir</string>
    <string name="efectivo">Efectivo</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="registrarse">Registrarse</string>
    <string name="cancelar">Cancelar</string>
    <string name="traspaso">Traspaso</string>
    <string name="title">🄶🄰🅂🅃🄾🅂</string>
    <string name="realizar">Realizar</string>
</resources>
